...
                        color = MaterialTheme.colorScheme.onSurfaceVariant
                    )
                    LinearProgressIndicator(
                        progress = { uiState.stats.visitedPercentage },
                        modifier = Modifier
                            .fillMaxWidth()
                            .semantics { testTag = "overallProgress" }
                    )
                }
            }
        }

        item {
...
